2014-06-27  Andreas Kling  <akling@apple.com>

        [ARMv7] Skip one particularly expensive fastFree() alignment check.
        <https://webkit.org/b/134402>

        The size class alignment check in fastFree() was crazy expensive on ARMv7
        due to its use of modulo. Disabling it shaves 470ms off of PLT main thread
        time in the web process.

        Note that this was very hard to identify in profiles due to TCO.

        Reviewed by Gavin Barraclough.

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_ThreadCache::CreateCacheIfNecessary):

2014-06-26  Andreas Kling  <akling@apple.com>

        Bump FastMalloc thread cache max size to 1MB on iOS.
        <https://webkit.org/b/134365>

        The previous limit (512kB) comes from the old days of very-low-memory
        devices, and we can now afford to spend another 512kB here.
        Note that we already have a mechanism to purge FastMalloc caches on
        system memory pressure.

        Looks like a ~400ms progression on PLT.

        Reviewed by Geoff Garen.

        * wtf/FastMalloc.cpp:

2014-06-26  Laszlo Gombos  <l.gombos@samsung.com>

        Define TARGET_OS_IPHONE to 0 for non-darwin ports
        https://bugs.webkit.org/show_bug.cgi?id=134347

        Reviewed by Darin Adler.

        A follow-up to r169880 to make it easier to reason about
        the code. The purpose of this change to allow
        "#if TARGET_OS_IPHONE" in public header files.

        * wtf/Platform.h:

2014-06-26  Chris Fleizach  <cfleizach@apple.com>

        Add an undo group for each dictated utterance in WebKit
        https://bugs.webkit.org/show_bug.cgi?id=134086

        Applied review comments from Sam Weinig.

        Move the associated USE #define into Platform.h.

        * wtf/Platform.h:

2014-06-25  Geoffrey Garen  <ggaren@apple.com>

        Unreviewed, rolling out r166876.

        Caused some ECMA test262 failures

        Reverted changeset:
