@@ -86,6 +86,19 @@ public:
 
     template<typename U> friend MallocPtr<U> adoptMallocPtr(U*);
 
+    static MallocPtr malloc(size_t size)
+    {
+        MallocPtr mallocPtr;
+        mallocPtr.m_ptr = static_cast<T*>(fastMalloc(size));
+
+        return mallocPtr;
+    }
+
+    void realloc(size_t newSize)
+    {
+        m_ptr = static_cast<T*>(fastRealloc(m_ptr, newSize));
+    }
+
 private:
     explicit MallocPtr(T* ptr)
         : m_ptr(ptr)
